# pepp.reviews

./: .gitmodules  Cargo.toml  Pepp.Reviews.sln  README.md  config.toml
_script/: deploy.sh
content/: _index.md
content/review/black-paradox/: index.md
content/review/cosmonator/: index.md
content/review/diftforce/: index.md
content/review/eastshade/: index.md
content/review/et-armies/: index.md
content/review/gunkid-99/: index.md
content/review/hover/: index.md
content/review/jump-king/: index.md
content/review/nite-team-4/: index.md
content/review/one-finger-death-punch-2/: index.md
content/review/overcome/: index.md
content/review/regions-of-ruin/: index.md
content/review/story-about-my-uncle/: index.md
content/review/tacoma/: index.md
content/review/tanzia/: index.md
content/review/the-kings-bird/: index.md
src/: main.rs
src/Common/Models/: Video.cs
src/Generator/: Generator.csproj  Program.cs  appsettings.json
src/Generator/Mappers/: VideoMapper.cs
src/Templates/: Templates.csproj
src/Templates/Models/: IndexModel.cs
src/Templates/Razor/: index.cshtml
src/pepp.reviews.Web/: Program.cs  Startup.cs  appsettings.Development.json  appsettings.json  pepp.reviews.Web.csproj
src/pepp.reviews.Web/Controllers/: VideoController.cs
src/pepp.reviews.Web/Mappers/: VideoMapper.cs
src/pepp.reviews.Web/Models/: Video.cs
src/pepp.reviews.Web/Pages/: Error.cshtml.cs  Index.cshtml  Index.cshtml.cs  _ViewImports.cshtml
src/pepp.reviews.Web/Properties/: launchSettings.json
src/static/templates/: index.hbs
(+2 files in other folders)
