[package]
name = "pepp_reviews"
version = "0.1.0"
authors = ["Michael Peppler <peppage@gmail.com>"]
edition = "2018"
description  = "A simple website landing page for a youtube which auto populates their videos"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
reqwest = "0.10"
atom_syndication = "0.9"
serde = "1.0"
serde_json = "1.0"
actix-http = "2"
actix-web = "3"
handlebars = { version = "3.5", features = ["dir_source"] }
cached = "0.19"
